// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders IconCard correctly 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "borderRadius": 8,
      "display": "flex",
      "flexDirection": "column",
      "height": 200,
      "justifyContent": "center",
      "margin": 20,
      "padding": 8,
      "width": 200,
    }
  }
>
  <Image
    style={
      Object {
        "alignSelf": "center",
        "height": 0,
        "marginTop": 16,
        "width": 0,
      }
    }
  />
  <View
    style={
      Object {
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 26,
          "textAlign": "center",
        }
      }
    />
  </View>
</View>
`;

exports[`renders IconCard correctly 2`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "borderRadius": 8,
      "display": "flex",
      "flexDirection": "column",
      "height": 200,
      "justifyContent": "center",
      "margin": 20,
      "padding": 8,
      "width": 200,
    }
  }
>
  <Image
    style={
      Object {
        "alignSelf": "center",
        "height": 0,
        "marginTop": 16,
        "width": 0,
      }
    }
  />
  <View
    style={
      Object {
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 26,
          "textAlign": "center",
        }
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`renders IconCard correctly 3`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "borderRadius": 8,
      "display": "flex",
      "flexDirection": "column",
      "height": 200,
      "justifyContent": "center",
      "margin": 20,
      "padding": 8,
      "width": 200,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../__tests__/components/test.jpg",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 120,
        "marginTop": 16,
        "width": 120,
      }
    }
  />
  <View
    style={
      Object {
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 26,
          "textAlign": "center",
        }
      }
    >
      title
    </Text>
  </View>
</View>
`;
